# SCCAlgorithm

./: CMakeLists.txt  Presentazione.pptx  README.md  Tests.h  main.cpp
SCCAlgorithm/: StrongConnectedComponents.h  StrongConnectedComponentsNuutila.h  StronglyConnectedComponents.cpp  StronglyConnectedComponents.h
SCCAlgorithmTesting/: Testing.cpp  TestingNuutila.cpp
